# qrb_ros_pipeline_manager_service

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: quic-organization-repolinter.yml
include/qrb_ros_pipeline_manager/: pipeline_server.hpp
src/: pipeline_manager.cpp  pipeline_server.cpp
test/: test_app.cpp
